fixes spacing between title and nav bar on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -94,6 +94,7 @@
 
   @include small {
     height: 300px;
+    padding-bottom: 22%;
   }
 }
 
